bootstrap support, login template, authguard

--- a/goraceloty-front-end/src/app/app.component.html
+++ b/goraceloty-front-end/src/app/app.component.html
@@ -1,3 +1,1 @@
-<div>Gorace Loty</div>
-<button (click)="setHotelsString()"></button>
-<div>Hotel string: {{hotelsString}}</div>
+<router-outlet></router-outlet>
