Frontend table and setup try

--- a/goraceloty-front-end/src/app/app.component.html
+++ b/goraceloty-front-end/src/app/app.component.html
@@ -1,3 +1,5 @@
-<div>Gorace Loty</div>
-<button (click)="setHotelsString()"></button>
-<div>Hotel string: {{hotelsString}}</div>
+<!--<div>Gorace Loty</div>-->
+<!-- app.component.html -->
+<router-outlet></router-outlet>
+
+<<div>Hotel string</div>>
