Booking initiation, changing price depending on numAdults variable

--- a/goraceloty-front-end/src/app/booking-modal/booking-modal.component.html
+++ b/goraceloty-front-end/src/app/booking-modal/booking-modal.component.html
@@ -19,6 +19,10 @@
     <span>{{ bookingDetails.rooms }}</span>
     <button (click)="increment('rooms')">+</button>
   </div>
+  <div>
+    <label>Total price:</label>
+    <span>{{ bookingDetails.price }}</span>
+  </div>
   <button (click)="confirmBooking()">Confirm Booking</button>
   <button (click)="close()">Close</button>
 </div>
