--- a/goraceloty-front-end/src/app/offers_details/offer.details.component.html
+++ b/goraceloty-front-end/src/app/offers_details/offer.details.component.html
@@ -1,7 +1,7 @@
-<!-- offer-details.component.html -->
-<div *ngIf="transport; else noData">
+<!-- Transport Details Section -->
+<div *ngIf="transport; else noData" class="container mt-3">
   <h2>Transport Details</h2>
-  <table class="table">
+  <table class="table table-striped table-hover">
     <tr>
       <th>Transport ID</th>
       <td>{{ transport.transportID }}</td>
@@ -20,12 +20,37 @@
     </tr>
     <!-- Additional fields as necessary -->
   </table>
-  <!-- parent-component.html -->
-  <button (click)="openBookingModal()">Book Now</button>
-
-  <!-- Assuming BookingModalComponent can be toggled by an *ngIf -->
-  <app-booking-modal *ngIf="isModalOpen" (closeModal)="closeBookingModal()"></app-booking-modal>
 </div>
+
+<!-- Accommodation Details Section -->
+<div *ngIf="hotel; else noData" class="container mt-3">
+  <h2>Accommodation Details</h2>
+  <table class="table table-bordered table-striped table-hover">
+    <tr>
+      <th>Hotel ID</th>
+      <td>{{ hotel.hotelID }}</td>
+    </tr>
+    <tr>
+      <th>Hotel Name</th>
+      <td>{{ hotel.hotelName }}</td>
+    </tr>
+    <tr>
+      <th>City</th>
+      <td>{{ hotel.city }}</td>
+    </tr>
+    <tr>
+      <th>Country</th>
+      <td>{{ hotel.country }}</td>
+    </tr>
+    <!-- Additional fields as necessary -->
+  </table>
+</div>
+
+<!-- Booking Button and Modal -->
+<button class="btn btn-primary" (click)="openBookingModal()">Book Now</button>
+<app-booking-modal *ngIf="isModalOpen" (closeModal)="closeBookingModal()"></app-booking-modal>
+
+<!-- No Data Template -->
 <ng-template #noData>
-  <p>No transport details available.</p>
+  <p class="alert alert-warning">No details available.</p>
 </ng-template>
