--- a/goraceloty-front-end/src/app/offers_details/offer.details.component.html
+++ b/goraceloty-front-end/src/app/offers_details/offer.details.component.html
@@ -48,7 +48,10 @@
 
 <!-- Booking Button and Modal -->
 <button class="btn btn-primary" (click)="openBookingModal()">Book Now</button>
-<app-booking-modal *ngIf="isModalOpen" (closeModal)="closeBookingModal()"></app-booking-modal>
+<app-booking-modal *ngIf="isModalOpen" [hotelId] = "hotel.hotelID"
+                   [transportId] = "transport.transportID"
+                   [offerId] = "offerId"
+                   (closeModal)="closeBookingModal()"></app-booking-modal>
 
 <!-- No Data Template -->
 <ng-template #noData>
