--- a/goraceloty-front-end/src/app/booking-modal/booking-modal.component.html
+++ b/goraceloty-front-end/src/app/booking-modal/booking-modal.component.html
@@ -97,8 +97,8 @@
   </div>
 
   <div>
-    <label>Total price:</label>
-    <span>{{price }}</span>
+    <label>Total price: </label>
+    <span>{{price}} zł</span>
   </div>
 
   <button (click)="confirmBooking()">Confirm booking</button>
