--- a/goraceloty-front-end/src/app/reservation-tab/reservation-tab.component.html
+++ b/goraceloty-front-end/src/app/reservation-tab/reservation-tab.component.html
@@ -1,3 +1,9 @@
+<div>
+  <div *ngFor="let msg of messages">
+    {{ msg }}
+  </div>
+</div>
+
 <div *ngIf="reservations && reservations.length > 0">
   <div class="row">
     <div class="col-12">
