--- a/goraceloty-front-end/src/app/app.component.html
+++ b/goraceloty-front-end/src/app/app.component.html
@@ -18,5 +18,5 @@
 </nav>
 <p-messages></p-messages>
 
-<router-outlet></router-outlet>
+<router-outlet (activate)="onActivate($event)"></router-outlet>
 
