authentication setup for endpoints and websockets

--- a/goraceloty-front-end/src/app/login/login.component.html
+++ b/goraceloty-front-end/src/app/login/login.component.html
@@ -1,13 +1,13 @@
-
 <div class="container-flex">
-  <form>
-    <div class="row row-flex">
-      <div class="col-12 d-flex pb-2 pt-2 justify-content-center">
-    <input type="text" placeholder="Login">
-      </div>
-      <div class="col-12 d-flex pt-2 justify-content-center">
-    <input type="password" placeholder="Password">
-      </div>
-    </div>
+  <form (ngSubmit)="login()">
+  <div>
+    <label for="username">Username</label>
+    <input type="text" id="username" [(ngModel)]="username" name="username" required>
+  </div>
+  <div>
+    <label for="password">Password</label>
+    <input type="password" id="password" [(ngModel)]="password" name="password" required>
+  </div>
+  <button type="submit">Login</button>
   </form>
 </div>
