--- a/goraceloty-front-end/src/app/offers/offers.component.html
+++ b/goraceloty-front-end/src/app/offers/offers.component.html
@@ -25,9 +25,9 @@
               </thead>
               <tbody>
               <tr *ngFor="let offer of offers; let i = index" (click)="navigateToDetails(offer.id)" style="cursor: pointer;">
-                <th scope="row" [ngStyle]="offer.popularity > 2 ? { color: 'green' } : { color: 'red'}">{{ i + 1 }}</th>
-                <td>{{ offer.transportID }}</td>
-                <td>{{ offer.hotelID }}</td>
+                <th scope="row" [ngStyle]="offer.popularity > 2 ? { background: 'orange' } : { }">{{ i + 1 }}</th>
+                <td [ngStyle]="(transportPopularity[offer.transportID] || 0) > 2 ? { background: 'orange' } : { }">{{ offer.transportID }}</td>
+                <td [ngStyle]="(hotelPopularity[offer.hotelID] || 0) > 2 ? { background: 'orange' } : { }">{{ offer.hotelID }}</td>
                 <td>{{ offer.cityArrival }}</td>
                 <td>{{offer.cityDeparture }}</td>
                 <td>{{ offer.dateStart | date:'mediumDate' }}</td>
