--- a/goraceloty-front-end/src/app/app.component.html
+++ b/goraceloty-front-end/src/app/app.component.html
@@ -1,3 +1,24 @@
-<div>Gorace Loty</div>
-<button (click)="setHotelsString()"></button>
-<div>Hotel string: {{hotelsString}}</div>
+<!--<div>Gorace Loty</div>-->
+<!-- app.component.html -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Gorące Loty</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+<div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <ul class="navbar-nav mr-auto">
+    <li class="nav-item active">
+      <a class="nav-link" href="/offers">Offers</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/reservations">Reservations</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/changes">Change history</a>
+    </li>
+  </ul>
+</div>
+</nav>
+<p-messages></p-messages>
+
+<router-outlet></router-outlet>
