--- a/goraceloty-front-end/src/app/offers_changes/offers.changes.component.html
+++ b/goraceloty-front-end/src/app/offers_changes/offers.changes.component.html
@@ -1,16 +1,18 @@
-<div class="container mt-5">
-  <h2>Latest Offer Changes</h2>
-  <table class="table table-striped">
-    <thead>
-    <tr>
-      <th>Offer ID</th>
-      <th>Committed Change</th>
-      <th>Commit Type</th>
-      <th>Created At</th>
-    </tr>
-    </thead>
-    <tbody id="offerChangesBody">
-    <!-- Table rows will be added here dynamically -->
-    </tbody>
-  </table>
-</div>
+<table class="table table-hover">
+  <thead class="thead-light">
+  <tr>
+    <th scope="col">ID</th>
+    <th scope="col">Description</th>
+    <th scope="col">Change</th>
+    <th scope="col">Date</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr *ngFor="let change of offerChanges">
+    <td>{{ change.offerID }}</td>
+    <td>{{ change.commitType }}</td>
+    <td>{{ change.committedChange }}</td>
+    <td>{{ change.createdAt | date }}</td>
+  </tr>
+  </tbody>
+</table>
