--- a/goraceloty-front-end/src/app/app.component.html
+++ b/goraceloty-front-end/src/app/app.component.html
@@ -13,6 +13,9 @@
     <li class="nav-item">
       <a class="nav-link" href="/reservations">Reservations</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/changes">Change history</a>
+    </li>
   </ul>
 </div>
 </nav>
